// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Returns the default options with input restrictions/threshold/scroll 1`] = `
Object {
  "restrictions": Object {
    "container": Object {
      "allowLeavingFromBottom": false,
      "allowLeavingFromLeft": true,
      "allowLeavingFromRight": true,
      "allowLeavingFromTop": true,
    },
    "self": Object {
      "allowLeavingFromBottom": true,
      "allowLeavingFromLeft": true,
      "allowLeavingFromRight": true,
      "allowLeavingFromTop": false,
    },
  },
  "restrictionsStatus": Object {
    "isContainerRestricted": true,
    "isSelfRestricted": true,
  },
  "scroll": Object {
    "enable": true,
    "initialSpeed": 10,
    "threshold": Object {
      "horizontal": 9000,
      "vertical": 75,
    },
  },
  "threshold": Object {
    "horizontal": 9000,
    "vertical": 60,
  },
}
`;

exports[`extractOpts Returns default options when empty object is passed 1`] = `
Object {
  "restrictions": Object {
    "container": Object {
      "allowLeavingFromBottom": true,
      "allowLeavingFromLeft": true,
      "allowLeavingFromRight": true,
      "allowLeavingFromTop": true,
    },
    "self": Object {
      "allowLeavingFromBottom": true,
      "allowLeavingFromLeft": true,
      "allowLeavingFromRight": true,
      "allowLeavingFromTop": true,
    },
  },
  "restrictionsStatus": Object {
    "isContainerRestricted": false,
    "isSelfRestricted": false,
  },
  "scroll": Object {
    "enable": true,
    "initialSpeed": 10,
    "threshold": Object {
      "horizontal": 75,
      "vertical": 75,
    },
  },
  "threshold": Object {
    "horizontal": 60,
    "vertical": 60,
  },
}
`;

exports[`extractOpts Returns the default options with input restrictions/allowLeavingFromBottom 1`] = `
Object {
  "restrictions": Object {
    "container": Object {
      "allowLeavingFromBottom": false,
      "allowLeavingFromLeft": true,
      "allowLeavingFromRight": true,
      "allowLeavingFromTop": true,
    },
    "self": Object {
      "allowLeavingFromBottom": true,
      "allowLeavingFromLeft": true,
      "allowLeavingFromRight": true,
      "allowLeavingFromTop": true,
    },
  },
  "restrictionsStatus": Object {
    "isContainerRestricted": true,
    "isSelfRestricted": false,
  },
  "scroll": Object {
    "enable": true,
    "initialSpeed": 10,
    "threshold": Object {
      "horizontal": 75,
      "vertical": 75,
    },
  },
  "threshold": Object {
    "horizontal": 60,
    "vertical": 60,
  },
}
`;

exports[`extractOpts Returns the default options with input scroll/threshold 1`] = `
Object {
  "restrictions": Object {
    "container": Object {
      "allowLeavingFromBottom": true,
      "allowLeavingFromLeft": true,
      "allowLeavingFromRight": true,
      "allowLeavingFromTop": true,
    },
    "self": Object {
      "allowLeavingFromBottom": true,
      "allowLeavingFromLeft": true,
      "allowLeavingFromRight": true,
      "allowLeavingFromTop": true,
    },
  },
  "restrictionsStatus": Object {
    "isContainerRestricted": false,
    "isSelfRestricted": false,
  },
  "scroll": Object {
    "enable": true,
    "initialSpeed": 10,
    "threshold": Object {
      "horizontal": 1000,
      "vertical": 75,
    },
  },
  "threshold": Object {
    "horizontal": 60,
    "vertical": 60,
  },
}
`;

exports[`extractOpts Returns the default options with input scroll/threshold/enable 1`] = `
Object {
  "restrictions": Object {
    "container": Object {
      "allowLeavingFromBottom": true,
      "allowLeavingFromLeft": true,
      "allowLeavingFromRight": true,
      "allowLeavingFromTop": true,
    },
    "self": Object {
      "allowLeavingFromBottom": true,
      "allowLeavingFromLeft": true,
      "allowLeavingFromRight": true,
      "allowLeavingFromTop": true,
    },
  },
  "restrictionsStatus": Object {
    "isContainerRestricted": false,
    "isSelfRestricted": false,
  },
  "scroll": Object {
    "enable": false,
    "initialSpeed": 10,
    "threshold": Object {
      "horizontal": 1000,
      "vertical": 75,
    },
  },
  "threshold": Object {
    "horizontal": 60,
    "vertical": 60,
  },
}
`;

exports[`extractOpts Returns the default options with self restrictions/allowLeavingFromLeft+right 1`] = `
Object {
  "restrictions": Object {
    "container": Object {
      "allowLeavingFromBottom": true,
      "allowLeavingFromLeft": true,
      "allowLeavingFromRight": true,
      "allowLeavingFromTop": true,
    },
    "self": Object {
      "allowLeavingFromBottom": true,
      "allowLeavingFromLeft": false,
      "allowLeavingFromRight": false,
      "allowLeavingFromTop": true,
    },
  },
  "restrictionsStatus": Object {
    "isContainerRestricted": false,
    "isSelfRestricted": true,
  },
  "scroll": Object {
    "enable": true,
    "initialSpeed": 10,
    "threshold": Object {
      "horizontal": 75,
      "vertical": 75,
    },
  },
  "threshold": Object {
    "horizontal": 60,
    "vertical": 60,
  },
}
`;
